--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -1267,7 +1267,7 @@ resourceTypes = {
         description = "view the auth domain of the snapshot"
       }
       update_auth_domain = {
-        description = "update the groups in the auth domain of the snapshot"
+        description = "update the auth domain of the snapshot"
       }
     }
     ownerRoleName = "steward"
