--- a/src/main/resources/sam.conf
+++ b/src/main/resources/sam.conf
@@ -41,6 +41,8 @@ termsOfService {
   isGracePeriodEnabled = ${?TOS_GRACE_PERIOD_ENABLED}
   version = ${?TOS_VERSION}
   baseUrl = ${?TOS_BASE_URL}
+  rollingAcceptanceWindowExpirationDatetime = ${?TOS_ROLLING_ACCEPTANCE_WINDOW_EXPIRATION_DATETIME}
+  previousVersion = ${?TOS_PREVIOUS_VERSION}
 }
 
 oidc {
