ID-883 adjusted scalafmt rules to fix obnoxious indenting in Route files

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -13,3 +13,9 @@ rewrite.rules = [
   AsciiSortImports
   PreferCurlyFors
 ]
+
+fileOverride {
+  "glob:**/src/main/scala/org/broadinstitute/dsde/workbench/sam/api/**Routes*.scala" {
+    indentOperator.excludeRegex = "^.*~.*$"
+  }
+}
