--- a/src/main/resources/sam.conf
+++ b/src/main/resources/sam.conf
@@ -163,10 +163,10 @@ db {
     password = ${?POSTGRES_PASSWORD}
   }
 
-  sam_bad_query {
-    poolName = "sam_background"
-    poolInitialSize = 5
-    poolMaxSize = 5
+  sam_read_replica {
+    poolName = "sam_read_replica"
+    poolInitialSize = 8
+    poolMaxSize = 8
     poolConnectionTimeoutMillis = 5000
     driver = "org.postgresql.Driver"
     url = ${?POSTGRES_READ_URL}
