--- a/src/main/resources/sam.conf
+++ b/src/main/resources/sam.conf
@@ -130,7 +130,7 @@ db {
     poolMaxSize = 8
     poolConnectionTimeoutMillis = 5000
     driver = "org.postgresql.Driver"
-    url = ${?POSTGRES_READ_URL}
+    url = ${?POSTGRES_WRITE_URL}
     user = ${?POSTGRES_USERNAME}
     password = ${?POSTGRES_PASSWORD}
   }
@@ -159,6 +159,17 @@ db {
     poolConnectionTimeoutMillis = 5000
     driver = "org.postgresql.Driver"
     url = ${?POSTGRES_WRITE_URL}
+    user = ${?POSTGRES_USERNAME}
+    password = ${?POSTGRES_PASSWORD}
+  }
+
+  sam_read_replica {
+    poolName = "sam_read_replica"
+    poolInitialSize = 8
+    poolMaxSize = 8
+    poolConnectionTimeoutMillis = 5000
+    driver = "org.postgresql.Driver"
+    url = ${?POSTGRES_READ_URL}
     user = ${?POSTGRES_USERNAME}
     password = ${?POSTGRES_PASSWORD}
   }
