--- a/src/main/resources/swagger/api-docs.yaml
+++ b/src/main/resources/swagger/api-docs.yaml
@@ -2933,6 +2933,30 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorReport'
+    patch:
+      tags:
+        - Users
+      summary: patch the user's attributes
+      operationId: patchSamUserAttributes
+      requestBody:
+        description: User attributes to patch
+        content:
+          'application/json':
+            schema:
+              $ref: '#/components/schemas/SamUserAttributes'
+      responses:
+        200:
+          description: attibubutes set
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/SamUserAttributes'
+        404:
+          description: user not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorReport'
   /api/users/v2/{sam_user_id}:
     get:
       tags:
