--- a/src/main/resources/sam.conf
+++ b/src/main/resources/sam.conf
@@ -205,6 +205,11 @@ azureServices {
         publisher = "thebroadinstituteinc1615909626976"
         authorizedUserKey = authorizedTerraUser
     }
+    {
+        name = "terra-aster-prod"
+        publisher = "thebroadinstituteinc1615909626976"
+        authorizedUserKey = "authorizedTerraUser"
+    }
   ]
 }
 
