--- a/.github/workflows/verify_consumer_pacts.yml
+++ b/.github/workflows/verify_consumer_pacts.yml
@@ -315,6 +315,10 @@ jobs:
                           -e POSTGRES_READ_URL=localhost:5432 \
                           -e POSTGRES_USERNAME=sam-test \
                           -e POSTGRES_PASSWORD=sam-test \
+                          -e JANITOR_ENABLED=false \
+                          -e JANITOR_CLIENT_CREDENTIAL_FILE_PATH="" \
+                          -e JANITOR_TRACK_RESOURCE_PROJECT_ID="" \
+                          -e JANITOR_TRACK_RESOURCE_TOPIC_ID="" \
                           sbtscala/scala-sbt:openjdk-17.0.2_1.7.2_2.13.10 \
                           sbt "set scalafmtOnCompile := false" "project pact4s" "testOnly *SamProviderSpec"
 
