inherited and isPublic are policy-level attrs, not resource-level

--- a/src/main/resources/swagger/api-docs.yaml
+++ b/src/main/resources/swagger/api-docs.yaml
@@ -4387,7 +4387,7 @@ components:
         policies:
           type: array
           items:
-            type: string
+            $ref: '#/components/schemas/FilteredFlatResourcePolicy'
           description: policies the user is a part of on the resource
         roles:
           type: array
@@ -4399,12 +4399,6 @@ components:
           items:
             type: string
           description: actions the user has on the resource
-        isPublic:
-          type: string
-          description: isPublic is the resource public or not
-        inherited:
-          type: boolean
-          description: is this resource policy inherited from a parent resource
         authDomainGroups:
           type: array
           items:
@@ -4415,6 +4409,18 @@ components:
           items:
             type: string
           description: Auth Domain groups the user is not a member of
+    FilteredFlatResourcePolicy:
+      type: object
+      properties:
+        policy:
+          type: string
+          description: The policy name
+        isPublic:
+          type: boolean
+          description: Is this policy on the resource a public policy?
+        inherited:
+          type: boolean
+          description: Is this policy inherited from an parent resource?
     FilteredHierarchicalResource:
       type: object
       properties:
