Revert "[DC-830] Add snapshot builder permissions (#1396)"
This reverts commit 60a65fb0a00695ac12cb1bad0313c15b739b1fa7.

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -1256,9 +1256,6 @@ resourceTypes = {
       "share_policy::reader" = {
         description = "Can grant and revoke a users' read permission"
       }
-      "share_policy::aggregate_data_reader" = {
-        description = "Can grant and revoke a users' aggregate data read permission"
-      }
       "share_policy::discoverer" = {
         description = "Can grant and revoke a users' discover permission"
       }
@@ -1293,45 +1290,20 @@ resourceTypes = {
       "unlock_resource" = {
         description = "Can unlock a resource"
       }
-      "read_aggregate_data" = {
-        description = "Can read aggregate data about a snapshot"
-      }
-      "create_snapshot_request" = {
-        description = "Can create a snapshot request for this snapshot"
-      }
-      "get_snapshot_builder_settings" = {
-        description = "Can get the snapshot builder settings for this snapshot"
-      }
-      "update_snapshot_builder_settings" = {
-        description = "Can update the snapshot builder settings for this snapshot"
-      }
     }
     ownerRoleName = "steward"
     roles = {
       steward = {
-        roleActions = ["share_policy::steward", "share_policy::custodian", "update_passport_identifier", "view_journal"]
-        includedRoles = ["custodian"]
+        roleActions = ["delete", "edit_datasnapshot", "update_snapshot", "read_data",  "discover_data",  "share_policy::steward", "share_policy::custodian", "share_policy::reader",  "share_policy::discoverer", "read_policies", "set_public", "update_passport_identifier", "export_snapshot", "view_journal", "read_auth_domain", "update_auth_domain", "lock_resource", "unlock_resource"]
       }
       custodian = {
-        roleActions = ["delete", "edit_datasnapshot", "update_snapshot", "share_policy::reader", "share_policy::aggregate_data_reader", "share_policy::discoverer", "read_policies", "set_public", "update_auth_domain", "lock_resource", "unlock_resource"]
-        includedRoles = ["reader"]
-      }
-      reader = {
-        roleActions = ["read_data", "read_policy::custodian","export_snapshot"]
-        includedRoles = ["aggregate_data_reader"]
-      }
-      aggregate_data_reader = {
-        roleActions = ["read_aggregate_data", "create_snapshot_request"]
-        includedRoles = ["discoverer"]
+        roleActions = ["delete", "edit_datasnapshot", "update_snapshot", "read_data",  "discover_data",  "share_policy::reader",  "share_policy::discoverer", "read_policies", "set_public", "export_snapshot", "read_auth_domain", "update_auth_domain", "lock_resource", "unlock_resource"]
       }
       discoverer = {
-        roleActions = ["discover_data", "read_policy::steward", "read_policy::discoverer", "read_auth_domain", "get_snapshot_builder_settings"]
+        roleActions = ["discover_data", "read_policy::steward", "read_policy::discoverer", "read_auth_domain"]
       }
-      snapshot_builder_manager = {
-        roleActions = ["update_snapshot_builder_settings"]
-        descendantRoles = {
-          snapshot-builder-request = ["approver"]
-        }
+      reader = {
+        roleActions = ["read_data", "discover_data", "read_policy::steward", "read_policy::custodian", "read_policy::discoverer", "export_snapshot", "read_auth_domain"]
       }
       admin = {
         roleActions = ["read_policies", "share_policy::steward", "alter_policies", "read_auth_domain", "update_auth_domain", "unlock_resource"]
@@ -1339,32 +1311,6 @@ resourceTypes = {
     }
     reuseIds = false
     authDomainConstrainable = true
-  }
-  snapshot-builder-request = {
-    actionPatterns = {
-      get = {
-        description = "Get or list the snapshot builder request"
-      }
-      update = {
-        description = "Update the snapshot builder request"
-      }
-      delete = {
-        description = "Delete the snapshot builder request"
-      }
-      approve = {
-        description = "Approve or reject the snapshot builder request"
-      }
-    }
-    ownerRoleName = "owner"
-    roles = {
-      owner = {
-        roleActions = ["get", "update", "delete"]
-      }
-      approver = {
-        roleActions = ["get", "approve"]
-      }
-    }
-    reuseIds = false
   }
   service-perimeter = {
     actionPatterns = {
